// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulImage > Snapshot test > Basic image snapshot 1`] = `
<DocumentFragment>
  <img
    alt="Test image"
    src="test.jpg"
  />
</DocumentFragment>
`;

exports[`DelightfulImage > Snapshot test > Image with styles snapshot 1`] = `
<DocumentFragment>
  <img
    alt="Test image"
    src="test.jpg"
    style="border-radius: 8px;"
  />
</DocumentFragment>
`;

exports[`DelightfulImage > Snapshot test > Image with click event snapshot 1`] = `
<DocumentFragment>
  <img
    alt="Test image"
    src="test.jpg"
  />
</DocumentFragment>
`;

exports[`DelightfulImage > Snapshot test > Image with class name snapshot 1`] = `
<DocumentFragment>
  <img
    alt="Test image"
    class="custom-image"
    src="test.jpg"
  />
</DocumentFragment>
`;

exports[`DelightfulImage > Snapshot test > Custom width image snapshot 1`] = `
<DocumentFragment>
  <img
    alt="Test image"
    src="test.jpg"
    width="200"
  />
</DocumentFragment>
`;

exports[`DelightfulImage > Snapshot test > Custom height image snapshot 1`] = `
<DocumentFragment>
  <img
    alt="Test image"
    height="150"
    src="test.jpg"
  />
</DocumentFragment>
`;
